# master-system

./: .env.example  Dockerfile  README.md  SPEC.md  build.py  docker-compose.yaml  install.bat  preview.html  pyproject.toml  start-all.bat  start-backend.bat  start-frontend.bat
backend/: .env.example  main.py  requirements.txt
backend/core/: __init__.py  api_keys.py  engine.py  providers.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
